# rico8-games

./: Cargo.toml
airwolf/: Cargo.toml  assets.rico8
airwolf/.cargo/: config.toml
airwolf/src/: bullet.rs  common.rs  enemy_aircraft.rs  entity.rs  explosion.rs  lib.rs  rotor.rs  scrolling_map.rs  shooter.rs  the_lady.rs
src/: bullet.rs  common.rs  entity.rs  lib.rs  the_lady.rs
